# mcp-server-template

./: .env.example  AGENTS.md  GEMINI.md  README.md  opencode.json  pyproject.toml  server.py
.github/workflows/: build-package.yaml  build-package.yml
.opencode/agent/: review.md
mcpserver/: core.py
src/: __init__.py  app_config.py  core.py
